--- a/src/main/resources/templates/buah.html
+++ b/src/main/resources/templates/buah.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div th:replace="/header :: header"></div>
+    <div th:replace="~{/header :: header}"></div>
 
     <div th:if="${message != null}" class="alert alert-success alert-dismissible fade show text-center message"
          role="alert">
